--- a/public/css/materialdesignicons.css
+++ b/public/css/materialdesignicons.css
@@ -3,12 +3,12 @@
   font-family: 'Material Icons';
   font-style: normal;
   font-weight: 400;
-  src: url(http://127.0.0.1/sjdbranchworks/public/fonts/MaterialIcons-Regular.eot); /* For IE6-8 */
+  src: url(../fonts/MaterialIcons-Regular.eot); /* For IE6-8 */
   src: local('Material Icons'),
     local('MaterialIcons-Regular'),
-    url(http://127.0.0.1/sjdbranchworks/public/fonts/MaterialIcons-Regular.woff2) format('woff2'),
-    url(http://127.0.0.1/sjdbranchworks/public/fonts/MaterialIcons-Regular.woff) format('woff'),
-    url(http://127.0.0.1/sjdbranchworks/public/fonts/MaterialIcons-Regular.ttf) format('truetype');
+    url(../fonts/MaterialIcons-Regular.woff2) format('woff2'),
+    url(../fonts/MaterialIcons-Regular.woff) format('woff'),
+    url(../fonts/MaterialIcons-Regular.ttf) format('truetype');
 }
 .mdi:before,
 .mdi-set {
