--- a/public/css/style.css
+++ b/public/css/style.css
@@ -179,4 +179,16 @@ body{
   padding-bottom: 0px;
 }
 
+.fa-star
+{
+  font-size: 24px;
+  color: #ffd700;
+}
+
+.fa-star-o
+{
+  font-size: 24px;
+  color: #ffd700;
+}
+
 /* [End] Notification */
